fix(ticker): use more of the screen height for the ticker components
because currently about 30px are not used at the bottom of the screen. This causes an issue with some extra margin-bottom that has been applied to the body, but this is a generic thing so it is not changed here (causes an extra vertical scrollbar because the body always needs some extra space)

--- a/src/styles/specifics/ticker/_components.sass
+++ b/src/styles/specifics/ticker/_components.sass
@@ -78,7 +78,7 @@ uni-ticker-filters
         @extend %ticker-headers
 
     .filter-container
-        height: calc(100vh - #{pxToRem(250)})
+        height: calc(100vh - #{pxToRem(220)})
         background-color: $uni-color-scale5
         color: $uni-color-negative
         border-radius: 0 pxToRem(7) pxToRem(7) 0
