--- a/src/styles/specifics/ticker/_ticker.sass
+++ b/src/styles/specifics/ticker/_ticker.sass
@@ -56,7 +56,7 @@ uni-ticker
 
     .data-container
         background-color: white
-        height: calc(100vh - #{pxToRem(250)} - 2.35rem)
+        height: calc(100vh - #{pxToRem(220)} - 2.35rem)
         border-radius: 0 0 pxToRem(7) pxToRem(7)
         padding: 1rem 1rem 0rem
         box-sizing: border-box
@@ -116,7 +116,7 @@ uni-sub-ticker-container
         opacity: 0
 
     .sub-ticker-container
-        height: calc(100vh - #{pxToRem(250)})
+        height: calc(100vh - #{pxToRem(220)})
         display: inline-block
         width: 100%
         font-weight: 300
